v6/README.md
# YelpCamp

* Add Landing Page
* Add Campground page that lists all campgrounds

# Each Campground has:

* Name
* Image


[
	{name:"Salamon Creek", image: "http://www.image.com" }
	{name:"Salamon Creek", image: "http://www.image.com" }
	{name:"Salamon Creek", image: "http://www.image.com" }
	{name:"Salamon Creek", image: "http://www.image.com" }
]

# Layout

* Create header and footer partials
* Add in Bootstrap

# Creating new Campgrounds

* Setup new Campground POST route
* Add in body-parser
* Setup route to show form
* Add basic unstyled form

# Style the Campground page

* Adder better header/title
* Make campgrounds display in a grid

# Style the navbar & form

* Add Navbar to all templates
* Style the new campground form

# Databases

## Intro to Databases

* What is database ?
* SQL vs NoSQL

## Mongoose

* What is Mongoose?
* Why are we using it?
* Interact with a mongo database using mongoose.

RESTFUL ROUTE
=============

Name			URL 						Verb 			description
==========================================
INDEX		/campgrounds			GET				Display list of all campgrounds
NEW 		/campgrounds/new	GET 			Displays form to make a new campground
CREATE 	/campgrounds 			POST			Add new campground to DB
SHOW		/campgrounds/:id	GET 			Shows info about one campground 
